Configured mysql database connection

--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AccountOwnerServer\AccountOwnerServer.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
   </ItemGroup>
 
 </Project>
