--- a/AccountOwnerServer/appsettings.json
+++ b/AccountOwnerServer/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "mysqlconnection": {
+    "connectionString": "server=localhost;userid=root;password=varunak47;database=accountowner;"
+  },
   "AllowedHosts": "*"
 }
