--- a/AccountOwnerServer/appsettings.json
+++ b/AccountOwnerServer/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "mysqlconnection": {
-    "connectionString": "server=localhost;userid=root;password=varunak47;database=accountowner;"
+    "connectionString": "server=localhost;userid=tak1za;password=varunak47;database=accountowner;"
   },
   "AllowedHosts": "*"
 }
