--- a/accountownerclientreact/package.json
+++ b/accountownerclientreact/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^3.4.1",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
+    "react-moment": "^0.9.2",
     "react-redux": "^7.1.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.1",
